btn not adapted

--- a/btn.html
+++ b/btn.html
@@ -8,33 +8,28 @@
   </head>
   <body>
     <section class="container">
+      <div class="row">
+        <button class="btn red" id="btn_1"></button>
 
-      <div class="center">
-        <div>
-          <button class="btn blue" id="btn_1"></button>
-        </div>
+        <button class="btn orange" id="btn_2"></button>
 
-        <div>
-          <button class="btn pink" id="btn_2"></button>
-        </div>
+        <button class="btn yellow" id="btn_3"></button>
+      </div>
+      
+      <div class="row">
+        <button class="btn green" id="btn_4"></button>
 
-        <div>
-          <button class="btn" id="btn_3"></button>
-        </div>
+        <button class="btn skyblue" id="btn_5"></button>
+
+        <button class="btn blue" id="btn_6"></button>
       </div>
 
-      <div class="center">
-        <div>
-          <button class="btn" id="btn_4"></button>
-        </div>
+      <div class="row">
+        <button class="btn violet" id="btn_7"></button>
 
-        <div>
-          <button class="btn" id="btn_5"></button>
-        </div>
+        <button class="btn black" id="btn_8"></button>
 
-        <div>
-          <button class="btn" id="btn_6"></button>
-        </div>
+        <button class="btn brown" id="btn_9"></button>
       </div>
     </section>
     <script src="./btn.js"></script>
